--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="wrapper">
             <!-- untuk home -->
             <section id="home">
-                <img src="image/Tumpeng.jpg" width="400" height="300"/>
+                <img src="Tumpeng.jpg" width="400" height="300"/>
                 <div class="kolom">
                     <p class="deskripsi">Cintai makanan khas Indonesia</p>
                     <h2>Tetap Sehat, Tetap Semangat</h2>
