--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                         <li><a href="#menu">Menu</a></li>
                         <li><a href="#service">Service</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <!-- <li><a href="" class="tbl-biru">Sign Up</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -38,7 +37,7 @@
                 </div>
             </section>
 
-            <!-- untuk courses -->
+            <!-- untuk about -->
             <section id="about">
                 <div class="kolom">
                     <p class="deskripsi">About Us</p>
@@ -46,10 +45,10 @@
                     <p> Ada banyak variasi makanan khas di Indonesia, hampir di setiap daerah di Indonesia memiliki makanan khas sendiri-sendiri. Makanan Indonesia sudah tidak dapat diragukan lagi tentang rasanya. Ketika kalian mencoba, pasti akan ketagihan.</p>
                     <p><a href="" class="tbl-biru">Pelajari Lebih Lanjut</a></p>
                 </div>
-                <img src="image/Nasi Goreng.jpg" width="350" height="350"/>
+                <img src="Nasi Goreng.png" width="350" height="350"/>
             </section>
 
-            <!-- untuk tutors -->
+            <!-- untuk menu -->
             <section id="menu">
                 <div class="tengah">
                     <div class="kolom">
@@ -60,44 +59,44 @@
 
                     <div class="tutor-list">
                         <div class="kartu-tutor">
-                            <img src="image/Rendang.jpg"/>
+                            <img src="Rendang.png"/>
                             <p>RENDANG</p>
                             <p>25K</p>
                         </div>
                         <div class="kartu-tutor">
-                            <img src="image/Rawon.jpg"/>
+                            <img src="Rawon.png"/>
                             <p>RAWON</p>
                             <p>25K</p>
                         </div>
                         <div class="kartu-tutor">
-                            <img src="image/Sate Madura.jpg"/>
+                            <img src="Sate Madura.png"/>
                             <p>SATE</p>
                             <p>20K</p>
                         </div>
                         <div class="kartu-tutor">
-                            <img src="image/Martabak telur.jpg"/>
+                            <img src="Martabak telur.png"/>
                             <p>MARTABAK TELUR</p>
                             <p>15K</p>
                         </div>
                     </div>
                     <div class="tutor-list">
                         <div class="kartu-tutor">
-                            <img src="image/Kerak telor.jpg"/>
+                            <img src="Kerak telor.png"/>
                             <p>KERAK TELUR</p>
                             <p>15K</p>
                         </div>
                         <div class="kartu-tutor">
-                            <img src="image/Pempek.jpg"/>
+                            <img src="Pempek.png"/>
                             <p>PEMPEK</p>
                             <p>20K</p>
                         </div>
                         <div class="kartu-tutor">
-                            <img src="image/Putu.jpg"/>
+                            <img src="Putu.png"/>
                             <p>KUE PUTU</p>
                             <P>15K</P>
                         </div>
                         <div class="kartu-tutor">
-                            <img src="image/Klepon.jpg"/>
+                            <img src="Klepon.png"/>
                             <p>KUE KLEPON</p>
                             <P>15K</P>
                         </div>
@@ -105,7 +104,7 @@
                 </div>
             </section>
 
-            <!-- untuk partners -->
+            <!-- untuk service -->
             <section id="service">
                 <div class="tengah">
                     <div class="kolom">
