--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="wrapper">
             <!-- untuk home -->
             <section id="home">
-                <img src="Tumpeng.png" width="400" height="300">
+                <img src="Tumpeng.png" width="400" height="300"/ alt="">
                 <div class="kolom">
                     <p class="deskripsi">Cintai makanan khas Indonesia</p>
                     <h2>Tetap Sehat, Tetap Semangat</h2>
