--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="wrapper">
             <!-- untuk home -->
             <section id="home">
-                <img src="Tumpeng.jpg" width="400" height="300"/ alt="">
+                <img src="https://cdn.idntimes.com/content-images/community/2017/08/tumpeng-f4f666a99587633cf34ffa95280ec13a_600x400.jpg" width="400" height="300"/ alt="">
                 <div class="kolom">
                     <p class="deskripsi">Cintai makanan khas Indonesia</p>
                     <h2>Tetap Sehat, Tetap Semangat</h2>
